<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />

        <import type="paolo.udacity.downloader.platform.view.common.enums.DownloadEnum" />

        <variable
            name="viewModel"
            type="paolo.udacity.downloader.platform.view.common.views.DownloaderViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_download"
            android:layout_width="match_parent"
            android:layout_height="@dimen/d_m_25"
            android:contentDescription="@string/cd_text_basic_download_image"
            android:src="@drawable/ic_baseline_cloud_download_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/colorPrimary" />

        <RadioGroup
            android:id="@+id/rg_download_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/d_m_1.5"
            android:layout_marginEnd="@dimen/d_m_1.5"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_download">

            <RadioButton
                android:id="@+id/rb_glide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/d_m_7"
                android:onClick="@{_ -> viewModel.setDownloadObjective(DownloadEnum.GLIDE)}"
                android:text="@string/rd_text_glide" />

            <RadioButton
                android:id="@+id/rb_load_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/d_m_7"
                android:onClick="@{_ -> viewModel.setDownloadObjective(DownloadEnum.LOAD_APP)}"
                android:text="@string/rd_text_load_app" />

            <RadioButton
                android:id="@+id/rb_retrofit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/d_m_7"
                android:onClick="@{_ -> viewModel.setDownloadObjective(DownloadEnum.RETROFIT)}"
                android:text="@string/rd_text_retrofit" />

            <RadioButton
                android:id="@+id/rb_other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/d_m_7"
                android:onClick="@{_ -> viewModel.setDownloadObjective(DownloadEnum.OTHER)}"
                android:text="@string/rd_text_other" />

        </RadioGroup>

        <!---
        <EditText
            android:id="@+id/et_other_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/d_m_1.5"
            android:layout_marginEnd="@dimen/d_m_1.5"
            android:hint="@string/et_hint_other_url"
            android:importantForAutofill="no"
            android:inputType="textUri"
            android:minHeight="@dimen/d_m_7"
            android:text="@={viewModel.otherUrlToDownload}"
            android:visibility="@{viewModel.isOtherUrlSelected ? View.VISIBLE : View.GONE}"
            app:layout_constraintTop_toBottomOf="@+id/rg_download_options" />
        -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_other_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/d_m_1.5"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/d_m_1.5"
            android:hint="@string/et_hint_other_url"
            android:minHeight="@dimen/d_m_7"
            android:visibility="@{viewModel.isOtherUrlSelected ? View.VISIBLE : View.GONE}"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:error="@{viewModel.otherUrlError}"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/rg_download_options"
            app:shapeAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent"
            tools:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_other_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="textUri"
                android:text="@={viewModel.otherUrlToDownload}" />

        </com.google.android.material.textfield.TextInputLayout>

        <paolo.udacity.components.download_button.DownloadButtonView
            android:id="@+id/b_download"
            android:layout_width="match_parent"
            android:layout_height="@dimen/d_m_8"
            android:layout_margin="@dimen/d_p_1.5"
            android:contentDescription="@string/cd_download_button_view"
            android:onClick="@{_ -> viewModel.tryDownload(context)}"
            app:downloadProgress="@{viewModel.downloadProgress}"
            app:downloadResult="@{viewModel.downloadResult}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tl_other_url"
            app:ready="@{viewModel.readyForDownload}"
            custom:buttonColorDownloading="?attr/colorSecondary"
            custom:buttonColorIdle="?attr/colorPrimary"
            custom:textColorDownloading="?attr/colorOnSecondary"
            custom:textColorIdle="?attr/colorOnPrimary" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>