<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="paolo.udacity.downloader.platform.view.common.views.DownloaderViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/d_p_1.5"
        app:layoutDescription="@xml/scene_leave_detail"
        tools:context=".platform.view.common.views.DownloaderActivity">

        <!-- File name -->
        <TextView
            android:id="@+id/tv_file_name_descriptor"
            android:layout_width="@dimen/d_dynamic"
            android:layout_height="wrap_content"
            android:text="@string/text_file_name_descriptor"
            app:layout_constraintBottom_toBottomOf="@+id/tv_file_name"
            app:layout_constraintEnd_toStartOf="@+id/tv_file_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_file_name" />

        <TextView
            android:id="@+id/tv_file_name"
            android:layout_width="@dimen/d_dynamic"
            android:layout_height="wrap_content"
            android:text="@{viewModel.downloadObjectiveName}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_file_name_descriptor"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="GLIDE - Image loading library Lorem Ipsum" />

        <!-- Download status -->
        <TextView
            android:id="@+id/tv_download_result_descriptor"
            android:layout_width="@dimen/d_dynamic"
            android:layout_height="wrap_content"
            android:text="@string/text_download_result_descriptor"
            app:layout_constraintBottom_toBottomOf="@+id/tv_download_result"
            app:layout_constraintEnd_toStartOf="@+id/tv_download_result"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_download_result" />

        <TextView
            android:id="@+id/tv_download_result"
            android:layout_width="@dimen/d_dynamic"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d_m_1.5"
            android:text="@{viewModel.downloadResultDescription}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_download_result_descriptor"
            app:layout_constraintTop_toBottomOf="@+id/tv_file_name"
            tools:text="Success" />

        <!-- Dismiss action -->
        <Button
            android:id="@+id/b_dismiss_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d_m_2"
            android:background="@color/colorPrimary"
            android:text="@string/button_text_dismiss_detail"
            android:textColor="@color/colorTextOnPrimary"
            app:layout_constraintTop_toBottomOf="@+id/tv_download_result" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
